# AmplitudeSDK

./: .gitignore  CMakeLists.txt  NOTICE  codecov.yml  vcpkg.json
.github/workflows/: build.yml  cmake.yml
cmake/: CodeCoverage.cmake  FindAmplitudeAudioSDK.cmake
sample_project/: .amignore  .amproject  pc.buses.json
sample_project/attenuators/: impact.json  pipe.json  room.json
sample_project/collections/: grass_footsteps.json  metal_footsteps.json  snow_footsteps.json  test_collection.json  throw_collection_1.json  throw_collection_2.json
sample_project/effects/: bassboost.json  delay.json  equalizer.json  flanger.json  lpf.json  robotize.json
sample_project/events/: mute_bg_bus.json  play_throw.json  player_footstep.json  stop_throw.json
sample_project/pipelines/: default.json  stereo.json  tests.double_consume.json  tests.invalid.invalid_consumer_node.json  tests.invalid.invalid_producers_count.json  tests.invalid.missing_input.json  tests.invalid.missing_output.json  tests.invalid.missing_producers.json  tests.invalid.multiple_input.json  tests.invalid.multiple_output.json  tests.invalid.self_consume.json  (+1 more)
samples/: CMakeLists.txt
schemas/: engine_config_definition.fbs
scripts/: build_project.py  build_schemas.py  clean_project.py  common.py
tests/: CMakeLists.txt  assets.cpp  audio_buffer.cpp  engine.cpp  environment.cpp  fader.cpp  hrtf.cpp  main.cpp  math.cpp  pipeline.cpp  thread.cpp
tools/ampm/: CMakeLists.txt  main.cpp
tools/ampm/resources/: default.buses.json  default.config.json  default.pipeline.json  default.source.json
(+179 files in other folders)
